# basis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo_81739.567984327.mcap  flake.nix  make-coverage-report.sh
bash/: source_env.sh
cpp/: CMakeLists.txt
cpp/arguments/: CMakeLists.txt
cpp/arguments/include/basis/: arguments.h
cpp/arguments/include/basis/arguments/: argument_types.h  command_line.h
cpp/arguments/src/: argument_types.cpp
cpp/cli/: CMakeLists.txt
cpp/cli/include/basis/: launch.h
cpp/cli/include/basis/launch/: launch_definition.h  unit_loader.h
cpp/cli/src/: cli.cpp  cli_launch.h  cli_logger.cpp  cli_logger.h  cli_schema.h  cli_subcommand.h  cli_topic.h  fetch_schema.h  launch.cpp  launch.h  launch_definition.cpp  launch_definition.h  process_manager.cpp  process_manager.h  unit_loader.cpp  unit_loader.h
cpp/cli/test/: example.yaml  test.yaml  test.yaml.j2
cpp/core/: CMakeLists.txt
cpp/core/containers/: CMakeLists.txt
cpp/core/containers/include/basis/core/containers/: simple_mpsc.h  subscriber_callback_queue.h
cpp/core/containers/test/: CMakeLists.txt  test_containers.cpp
cpp/core/coordinator/: CMakeLists.txt
cpp/core/coordinator/include/basis/core/: coordinator.h  coordinator_connector.h  coordinator_default_port.h
cpp/core/coordinator/src/: coordinator.cpp  coordinator_main.cpp
cpp/core/coordinator/test/: CMakeLists.txt  test_coordinator.cpp
cpp/core/logging/: CMakeLists.txt
cpp/core/logging/include/basis/core/: logging.h
cpp/core/logging/include/basis/core/logging/: macros.h
cpp/core/logging/src/: logging.cpp
cpp/core/networking/: CMakeLists.txt
cpp/core/networking/include/basis/core/networking/: logger.h  socket.h
cpp/core/networking/src/: logger.cpp  socket.cpp
cpp/core/networking/test/: CMakeLists.txt  test_tcp.cpp
cpp/core/serialization/: CMakeLists.txt
cpp/core/serialization/include/basis/core/: serialization.h
cpp/core/serialization/include/basis/core/serialization/: message_type_info.h
cpp/core/serialization/src/: serialization.cpp
cpp/core/threading/: CMakeLists.txt
cpp/core/threading/include/basis/core/threading/: thread_pool.h
cpp/core/time/: CMakeLists.txt
cpp/core/time/include/basis/core/: time.h
cpp/core/time/include/basis/core/time/: chrono_adapter.h
cpp/core/time/src/: time.cpp
cpp/core/time/test/: CMakeLists.txt  test_time.cpp
cpp/core/transport/: CMakeLists.txt
cpp/core/transport/include/basis/core/transport/: convertable_inproc.h  inproc.h  logger.h  message_event.h  message_packet.h  message_type_info.h  publisher.h  publisher_info.h  simple_mpsc.h  subscriber.h  thread_pool_manager.h  transport.h  transport_manager.h
cpp/core/transport/src/: logger.cpp  publisher.cpp  subscriber.cpp
cpp/core/transport/test/: CMakeLists.txt  test_basic_transport.cpp
cpp/core/unit/: CMakeLists.txt
cpp/core/unit/include/basis/core/: unit.h
cpp/core/unit/src/: example.cpp
cpp/examples/: CMakeLists.txt
cpp/examples/src/: basis_example.cpp
cpp/launch/: CMakeLists.txt
cpp/launch/include/basis/launch/: launch_definition.h  mermaid_formatter.h  unit_loader.h
cpp/launch/src/: launch.cpp  launch_definition.cpp  mermaid_formatter.cpp  process_manager.h  unit_loader.cpp
cpp/launch/test/: CMakeLists.txt  foxglove.launch.yaml  test_include.launch.yaml  test_launch_definition.cpp
cpp/plugins/bridges/foxglove/: CMakeLists.txt
cpp/plugins/bridges/foxglove/src/: foxglove_bridge.cpp  foxglove_dummy_main.cpp
cpp/plugins/serialization/protobuf/: CMakeLists.txt
cpp/plugins/serialization/protobuf/src/: protobuf.cpp
cpp/plugins/serialization/protobuf/test/: CMakeLists.txt  test_protobuf.cpp
cpp/plugins/serialization/rosmsg/: CMakeLists.txt
cpp/plugins/serialization/rosmsg/src/: rosmsg.cpp
cpp/plugins/serialization/rosmsg/test/: CMakeLists.txt  test_rosmsg.cpp
cpp/plugins/transport/tcp/: CMakeLists.txt
cpp/plugins/transport/tcp/src/: epoll.cpp  tcp.cpp  tcp_connection.cpp  tcp_subscriber.cpp
cpp/plugins/transport/tcp/test/: CMakeLists.txt  test_tcp_transport.cpp
cpp/recorder/: CMakeLists.txt
cpp/recorder/include/basis/: recorder.h
cpp/recorder/include/basis/recorder/: glob.h  protobuf_log.h
cpp/recorder/src/: recorder.cpp
cpp/recorder/test/: CMakeLists.txt  test_recorder.cpp
cpp/replayer/: CMakeLists.txt
cpp/replayer/include/basis/: replayer.h
cpp/replayer/include/basis/replayer/: config.h  logger.h  replay_args.h
cpp/replayer/src/: replay.cpp  replay_args.cpp  replayer.cpp
cpp/synchronizers/: CMakeLists.txt
cpp/synchronizers/include/basis/synchronizers/: all.h  field.h  synchronizer_base.h
cpp/synchronizers/src/: synchronizers.cpp
cpp/synchronizers/test/: CMakeLists.txt  test_synchronizers.cpp
cpp/unit/: CMakeLists.txt
cpp/unit/include/basis/: unit.h  unit_metadata.h
cpp/unit/include/basis/unit/: args.h  args_command_line.h  args_template.h  create_unit.h  create_unit_impl.h
cpp/unit/src/: args_template.cpp  unit.cpp  unit_main.cpp
demos/simple_pub_sub/: CMakeLists.txt  gen.sh  simple_pub.unit.yaml  simple_pub.yaml  simple_sub.unit.yaml
demos/simple_pub_sub/include/: simple_pub.h  simple_sub.h
demos/simple_pub_sub/proto/: CMakeLists.txt
demos/simple_pub_sub/src/: simple_pub.cpp  simple_pub_sub.cpp  simple_sub.cpp
demos/simple_pub_sub/src/include/: simple_pub.h  simple_sub.h
demos/simple_pub_sub/src/template/: simple_pub.example.cpp  simple_sub.example.cpp  simple_sub.example.h
demos/simple_pub_sub/template/: simple_pub.example.cpp  simple_pub.example.h  simple_sub.example.cpp  simple_sub.example.h
docs/: repo.md  (+3 more)
proto/: CMakeLists.txt  basis_example.proto  test.proto  time.proto  transport.proto
unit/test/: CMakeLists.txt  test_unit.unit.yaml
unit/test/include/: test_unit.h  time_test_inproc.h
unit/test/src/: test_unit.cpp
unit/test/template/: test_unit.example.cpp  test_unit.example.h
unit/test/test/: CMakeLists.txt  test_unit_generation.cpp
unit/wip/: CMakeLists.txt  wip.unit.yaml
unit/wip/include/: wip.h
unit/wip/src/: wip.cpp
unit/wip/template/: wip.cpp  wip.example.cpp  wip.example.h  wip.h
(+33 files in other folders)
